@@ -116,6 +116,36 @@ public class TestTypePromotion extends LuceneTestCase {
     dir.close();
   }
 
+  private short asShort(BytesRef b) {
+    int pos = b.offset;
+    return (short) (0xFFFF & ((b.bytes[pos++] & 0xFF) << 8) | (b.bytes[pos] & 0xFF));
+  }
+  
+  /**
+   * Converts 4 consecutive bytes from the current offset to an int. Bytes are
+   * interpreted as Big-Endian (most significant bit first)
+   * <p>
+   * NOTE: this method does <b>NOT</b> check the bounds of the referenced array.
+   */
+  private int asInt(BytesRef b) {
+    return asIntInternal(b, b.offset);
+  }
+
+  /**
+   * Converts 8 consecutive bytes from the current offset to a long. Bytes are
+   * interpreted as Big-Endian (most significant bit first)
+   * <p>
+   * NOTE: this method does <b>NOT</b> check the bounds of the referenced array.
+   */
+  private long asLong(BytesRef b) {
+    return (((long) asIntInternal(b, b.offset) << 32) | asIntInternal(b, b.offset + 4) & 0xFFFFFFFFL);
+  }
+  
+  private int asIntInternal(BytesRef b, int pos) {
+    return ((b.bytes[pos++] & 0xFF) << 24) | ((b.bytes[pos++] & 0xFF) << 16)
+        | ((b.bytes[pos++] & 0xFF) << 8) | (b.bytes[pos] & 0xFF);
+  }
+  
   private void assertValues(TestType type, Directory dir, long[] values)
       throws CorruptIndexException, IOException {
     IndexReader reader = IndexReader.open(dir);
@@ -137,13 +167,13 @@ public class TestTypePromotion extends LuceneTestCase {
           value = bytes.bytes[bytes.offset];
           break;
         case 2:
-          value = bytes.asShort();
+          value = asShort(bytes);
           break;
         case 4:
-          value = bytes.asInt();
+          value = asInt(bytes);
           break;
         case 8:
-          value = bytes.asLong();
+          value = asLong(bytes);
           break;
           
         default:
@@ -217,10 +247,10 @@ public class TestTypePromotion extends LuceneTestCase {
       case BYTES_VAR_STRAIGHT:
         if (random.nextBoolean()) {
           ref.copy(random.nextInt());
-          values[i] = ref.asInt();
+          values[i] = asInt(ref);
         } else {
           ref.copy(random.nextLong());
-          values[i] = ref.asLong();
+          values[i] = asLong(ref);
         }
         valField.setBytes(ref, valueType);
         break;
